--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background"
     android:padding="16dp"
-    tools:context="com.chungnguyen.orderfood.Cart">
+    tools:context="com.ltdd.orderfood.Cart">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listCart"
