--- a/app/src/main/res/layout/activity_chang_pass.xml
+++ b/app/src/main/res/layout/activity_chang_pass.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back8"
-    tools:context="com.chungnguyen.orderfood.ChangPass">
+    tools:context="com.ltdd.orderfood.ChangPass">
     <ImageView
         android:layout_marginTop="50dp"
         android:src="@drawable/logo2"
@@ -69,7 +69,7 @@
         android:layout_marginBottom="194dp"
         android:layout_weight="1"
         android:background="@drawable/button_style_sign_up"
-        android:text="Đổi thông tin"
-        android:textColor="@color/overlayActionBar" />
+        android:text="Lưu thay đổi"
+        android:textColor="@color/colorText" />
 
 </RelativeLayout>
