--- a/app/src/main/res/layout/activity_chang_pass_otp_vetifi.xml
+++ b/app/src/main/res/layout/activity_chang_pass_otp_vetifi.xml
@@ -20,8 +20,9 @@
 
     <EditText
         android:id="@+id/verify_code_edit"
-        android:layout_width="409dp"
-        android:layout_height="68dp"
+        android:layout_width="374dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="396dp"
         android:background="@drawable/eddittext_style"
         android:hint="Enter Number Your OTP"
@@ -44,7 +45,7 @@
         android:gravity="center"
         android:text="Otp verify"
 
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/verify_code_edit"
         tools:ignore="MissingConstraints" />
