--- a/app/src/main/res/layout/activity_food_detail.xml
+++ b/app/src/main/res/layout/activity_food_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@drawable/back11"
     android:layout_height="match_parent"
-    tools:context="com.chungnguyen.orderfood.FoodDetail">
+    tools:context="com.ltdd.orderfood.FoodDetail">
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
