--- a/app/src/main/res/layout/activity_o_t_p_verify.xml
+++ b/app/src/main/res/layout/activity_o_t_p_verify.xml
@@ -45,7 +45,7 @@
         android:gravity="center"
         android:text="Otp verify"
 
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/verify_code_edit"
         tools:ignore="MissingConstraints" />
