--- a/app/src/main/res/layout/activity_order_status.xml
+++ b/app/src/main/res/layout/activity_order_status.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back11"
-    tools:context="com.chungnguyen.orderfood.OrderStatus">
+    tools:context="com.ltdd.orderfood.OrderStatus">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listOrder"
         android:background="@android:color/transparent"
