--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,7 +5,7 @@
     android:background="@drawable/back10"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.chungnguyen.orderfood.SignIn">
+    tools:context="com.ltdd.orderfood.SignIn">
     <ImageView
         android:layout_marginTop="50dp"
         android:src="@drawable/logo2"
@@ -51,6 +51,7 @@
             android:gravity="center_vertical"
             android:id="@+id/ckbRemember"
             android:text="Nhớ tài khoản"
+            android:textSize="18dp"
             android:textColor="@color/colorPrimaryDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -60,7 +61,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:text="Đăng nhập"
-            android:textColor="@color/overlayActionBar"
+            android:textColor="@color/colorText"
             android:id="@+id/btnSignIn"
             android:layout_margin="8dp"
             android:layout_width="match_parent"
