--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@drawable/background"
     android:layout_height="match_parent"
-    tools:context="com.chungnguyen.orderfood.Home">
+    tools:context="com.ltdd.orderfood.Home">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
