--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -10,7 +10,7 @@
             android:title="Thực đơn" />
         <item
             android:id="@+id/nav_cart"
-            android:icon="@drawable/ic_notifications_black_24dp"
+            android:icon="@drawable/ic_shopping_cart_black_24dp"
             android:title="Giỏ hàng" />
         <item
             android:id="@+id/nav_order"
@@ -19,7 +19,7 @@
         <item
             android:id="@+id/nav_exit"
             android:icon="@drawable/ic_exit_to_app_black_24dp"
-            android:title="Thoát" />
+            android:title="Đăng xuất" />
     </group>
 
     <item android:title="Communicate">
