--- a/app/src/main/res/drawable/button_style_sign_up.xml
+++ b/app/src/main/res/drawable/button_style_sign_up.xml
@@ -3,6 +3,6 @@
     <corners android:radius="50dp"></corners>
     <padding android:bottom="15dp" android:left="15dp" android:right="15dp"
         android:top="15dp"/>
-    <solid android:color="#096E5F"/>
+    <solid android:color="@color/btnSignUp"/>
 
 </shape>
