--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -18,7 +18,8 @@
         android:layout_alignParentBottom="true"
         app:cardBackgroundColor="#FAF9F7"
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="100dp"
+        app:cardCornerRadius="10dp">
         <RelativeLayout
             android:id="@+id/tinhtien"
             android:layout_width="match_parent"
@@ -34,21 +35,25 @@
                     android:text="Tổng:"
                     android:textColor="@color/colorPrimaryDark"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                    />
+
                 <TextView
                     android:id="@+id/total"
-                    android:text=" 10,000"
-                    android:textSize="20sp"
-                    android:textColor="@color/overlayActionBar"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:text="10,000"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="20sp" />
 
             </LinearLayout>
 
             <Button
                 android:layout_weight="1"
                 android:text="Đặt Hàng"
-                android:textColor="@color/overlayActionBar"
+                android:textColor="@color/colorText"
 
                 android:id="@+id/btnPlaceOrder"
                 android:layout_alignParentBottom="true"
