--- a/app/src/main/res/layout/activity_food_detail.xml
+++ b/app/src/main/res/layout/activity_food_detail.xml
@@ -3,114 +3,136 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/back11"
     android:layout_height="match_parent"
     tools:context="com.ltdd.orderfood.FoodDetail">
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:fitsSystemWindows="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
             android:fitsSystemWindows="true"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:contentScrim="#0e0d0e"
             app:expandedTitleTextAppearance="@android:color/transparent"
-            android:layout_width="match_parent"
-            android:layout_height="350dp">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
             <ImageView
-                app:layout_collapseMode="parallax"
-                android:scaleType="centerCrop"
-                android:contentDescription="@null"
                 android:id="@+id/img_food"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-            <androidx.appcompat.widget.Toolbar
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                android:layout_height="match_parent"
+                android:contentDescription="@null"
+                android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
+                android:background="@drawable/background"/>
+
+            <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
-                app:title="Food name"
                 android:layout_width="match_parent"
-                android:layout_height="?actionBarSize">
+                android:layout_height="?actionBarSize"
+                app:layout_collapseMode="parallax"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:titleTextColor="@color/overlayBackground">
 
             </androidx.appcompat.widget.Toolbar>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnCart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_shopping_cart_black_24dp"
         app:backgroundTint="@color/white"
         app:elevation="6dp"
-        app:pressedTranslationZ="12dp"
         app:layout_anchor="@id/app_bar_layout"
         app:layout_anchorGravity="bottom|right|end"
-        app:useCompatPadding="true"
-        android:src="@drawable/ic_shopping_cart_black_24dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        app:pressedTranslationZ="12dp"
+        app:useCompatPadding="true" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnRating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_star_black_24dp"
         app:backgroundTint="@color/white"
         app:elevation="6dp"
-        app:pressedTranslationZ="12dp"
         app:layout_anchor="@id/app_bar_layout"
         app:layout_anchorGravity="bottom|right|start"
-        app:useCompatPadding="true"
-        android:src="@drawable/ic_star_black_24dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        app:pressedTranslationZ="12dp"
+        app:useCompatPadding="true" />
+
     <androidx.core.widget.NestedScrollView
-        android:clipToPadding="false"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+
             <androidx.cardview.widget.CardView
-                app:cardElevation="5dp"
-                app:cardUseCompatPadding="true"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:cardElevation="5dp"
+                app:cardCornerRadius="20dp"
+                app:cardUseCompatPadding="true"
+                android:layout_marginTop="24dp">
+
                 <LinearLayout
-                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:background="@drawable/item_style_radius"
+
+                    >
+
                     <TextView
 
-                        android:textStyle="bold"
-                        android:textSize="20sp"
-                        android:textColor="@color/colorPrimary"
-                        android:text="Food name"
-                        android:padding="12dp"
-                        android:layout_marginTop="8dp"
                         android:id="@+id/food_name"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:padding="12dp"
+                        android:text="Food name"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
                     <LinearLayout
                         android:id="@+id/layout_price"
-                        android:orientation="horizontal"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
                         <ImageView
-                            android:src="@drawable/ic_attach_money_black_24dp"
-                            android:layout_weight="1"
                             android:layout_width="0dp"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:src="@drawable/ic_attach_money_black_24dp"
+                            />
+
                         <TextView
 
-                            android:textStyle="bold"
-                            android:textSize="18sp"
-                            android:textColor="@color/colorPrimary"
-                            android:text="1.000"
                             android:id="@+id/food_price"
-                            android:layout_weight="9"
                             android:layout_width="0dp"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:layout_weight="9"
+                            android:text="1.000"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            />
                     </LinearLayout>
 
                     <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
@@ -119,39 +141,48 @@
                         android:layout_height="30dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginTop="8dp"
-                        app:backGroundColor="@color/colorAccent"
+                        app:backGroundColor="@color/overlayBackground"
                         app:finalNumber="10"
                         app:initialNumber="1"
-                        app:textSize="8sp">
+                        app:textSize="8sp"
+                        android:layout_marginBottom="12dp"  >
 
                     </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 app:cardElevation="5dp"
                 app:cardUseCompatPadding="true"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                app:cardCornerRadius="20dp">
+
                 <LinearLayout
-                    android:orientation="vertical"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
                     <RatingBar
                         android:id="@+id/ratingBar"
-                        android:rating="0"
-                        android:isIndicator="true"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:isIndicator="true"
+                        android:rating="0"
+                        android:layout_marginLeft="1dp"/>
+
                     <TextView
                         android:id="@+id/food_description"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
                         android:lineSpacingMultiplier="1.5"
-                        android:textColor="@android:color/black"
                         android:text="Description"
-                        android:textSize="14sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:textColor="@android:color/black"
+                        android:textSize="15sp"
+                        android:layout_marginBottom="12dp"
+                        android:paddingLeft="12dp"/>
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
