--- a/app/src/main/res/layout/activity_login_o_t_p.xml
+++ b/app/src/main/res/layout/activity_login_o_t_p.xml
@@ -25,25 +25,26 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:gravity="center"
-        android:text="Type Your Phone Number"
+        android:text="Nhập số điện thoại"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="14sp"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/sharedocument"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp" />
 
     <EditText
         android:id="@+id/input_country_code"
-        android:layout_width="49dp"
+        android:layout_width="60dp"
         android:layout_height="47dp"
         android:layout_below="@+id/Tv1"
         android:layout_alignStart="@+id/input_phone"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="28dp"
         android:background="@drawable/eddittext_style"
         android:gravity="center"
-        android:text="84"
+        android:text="+84"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -53,12 +54,12 @@
 
     <EditText
         android:id="@+id/input_phone"
-        android:layout_width="276dp"
+        android:layout_width="287dp"
         android:layout_height="47dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="108dp"
+        android:layout_marginStart="96dp"
         android:layout_marginTop="28dp"
         android:background="@drawable/eddittext_style"
         android:hint="@string/_0938472096"
@@ -83,7 +84,7 @@
         android:background="@drawable/button_style_sign_up"
         android:gravity="center"
 
-        android:text="Send Otp"
+        android:text="Gửi mã OTP"
         android:textColor="@color/colorText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/input_phone"
