--- a/app/src/main/res/layout/activity_o_t_p_verify.xml
+++ b/app/src/main/res/layout/activity_o_t_p_verify.xml
@@ -25,7 +25,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="388dp"
         android:background="@drawable/eddittext_style"
-        android:hint="Enter Number Your OTP"
+        android:hint="Nhập mã OTP"
         android:inputType="phone"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +43,7 @@
         android:background="@drawable/button_style_sign_up"
 
         android:gravity="center"
-        android:text="Otp verify"
+        android:text="Xác thực"
 
         android:textColor="@color/colorText"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="316dp"
-        android:text="Your Phone Number"
+        android:text="Nhập số điện thoại của bạn"
         android:gravity="center"
         android:textSize="23dp"
         android:textStyle="bold"
