--- a/app/src/main/res/layout/cart_layout.xml
+++ b/app/src/main/res/layout/cart_layout.xml
@@ -5,7 +5,8 @@
     app:cardElevation="4dp"
     android:background="@drawable/background"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="20dp">
     <LinearLayout
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
@@ -24,6 +25,7 @@
                 android:gravity="center_vertical|start"
                 android:textAllCaps="true"
                 android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"
                 android:text="Document 1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -33,6 +35,7 @@
                 android:gravity="center_vertical|start"
                 android:textAllCaps="true"
                 android:textStyle="italic"
+                android:textColor="@color/colorPrimaryDark"
                 android:text="100,000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -41,13 +44,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/btnxoa"
-            android:text="xóa"></Button>
+            android:text="xóa"
+            android:background="@drawable/button_style_sign_in"
+            android:textColor="@color/colorText"/>
         <ImageView
             android:layout_gravity="center_vertical|end"
             android:layout_marginRight="16dp"
             android:id="@+id/cart_item_count"
             android:layout_width="20dp"
-            android:layout_height="20dp" />
+            android:layout_height="20dp"
+            android:layout_marginHorizontal="2dp"/>
 
     </LinearLayout>
 
