--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="200dp"
+    android:layout_margin="8dp"
     app:cardElevation="4dp"
+    app:cardCornerRadius="30dp"
     android:layout_marginBottom="8dp">
 
     <RelativeLayout
@@ -15,7 +17,7 @@
             android:scaleType="centerCrop"
             android:background="@drawable/background"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"/>
 
         <LinearLayout
             android:weightSum="10"
@@ -32,7 +34,9 @@
                 android:gravity="center"
                 android:layout_weight="8"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:padding="2dp"
+                />
 
             <ImageView
                 android:id="@+id/btnShare"
@@ -40,14 +44,17 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:src="@drawable/ic_share_black_24dp"
-                android:tint="@android:color/white" />
+                android:tint="@android:color/white"
+                android:padding="2dp"/>
             <ImageView
                 android:tint="@android:color/white"
                 android:src="@drawable/ic_favorite_border_black_24dp"
                 android:id="@+id/fav"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content" />
+                android:layout_marginHorizontal="2dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"/>
 
         </LinearLayout>
     </RelativeLayout>
