--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,9 +21,9 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_home"
-        android:background="@color/browser_actions_divider_color"
-        app:itemTextColor="@android:color/white"
-        app:itemIconTint="@android:color/white"
+        android:background="@color/browser_actions_bg_grey"
+        app:itemTextColor="@android:color/black"
+        app:itemIconTint="@android:color/black"
         app:menu="@menu/activity_home_drawer"
         />
 
