--- a/app/src/main/res/layout/order_layout.xml
+++ b/app/src/main/res/layout/order_layout.xml
@@ -4,7 +4,8 @@
     android:layout_margin="8dp"
     app:cardElevation="4dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="30dp">
     <LinearLayout
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
