--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -32,6 +32,7 @@
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="@android:color/white"
         app:srcCompat="@drawable/ic_shopping_cart_black_24dp"
-        tools:ignore="VectorDrawableCompat" />
+        tools:ignore="VectorDrawableCompat"
+        android:contentDescription="null"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
