--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:background="@drawable/back"/>
+        android:background="@drawable/back"
+        android:contentDescription=""/>
     <LinearLayout
         android:orientation="vertical"
         android:layout_centerInParent="true"
@@ -21,7 +22,7 @@
         android:weightSum="1">
 
         <TextView
-            android:textSize="20dp"
+            android:textSize="20sp"
 
             android:textColor="@android:color/white"
             android:id="@+id/txtSlogan"
