--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -47,11 +47,11 @@
             android:textSize="20sp"
             />
         <CheckBox
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:gravity="center_vertical"
             android:id="@+id/ckbRemember"
-            android:text="Nhớ tài khoản"
-            android:textSize="30sp"
+            android:text="Nhớ"
+            android:textSize="40sp"
 
             android:textColor="@color/colorPrimaryDark"
             android:layout_width="wrap_content"
