--- a/app/src/main/res/drawable/round_bg.xml
+++ b/app/src/main/res/drawable/round_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#4f0e0d0e"/>
-    <corners android:topRightRadius="40dp"
-        android:topLeftRadius="40dp"/>
+    <solid android:color="#606060"/>
+    <corners android:topRightRadius="30dp"
+        android:topLeftRadius="30dp"/>
 </shape>
