--- a/app/src/main/res/layout/activity_chang_pass.xml
+++ b/app/src/main/res/layout/activity_chang_pass.xml
@@ -28,25 +28,22 @@
             android:layout_height="wrap_content"
             android:inputType="phone"
             android:textSize="20sp"
-            android:clickable="false"
-            android:cursorVisible="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
             />
         <EditText
             android:layout_margin="8dp"
-            android:id="@+id/edtName"
-            android:hint="Tên của bạn"
+            android:id="@+id/oldPass"
+            android:hint="Mật khẩu cũ"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:inputType="textPassword"
             android:background="@drawable/eddittext_style"
             />
         <EditText
             android:layout_margin="8dp"
             android:background="@drawable/eddittext_style"
-            android:id="@+id/edtPassword"
-            android:hint="Password"
+            android:id="@+id/newPass"
+            android:hint="Mật khẩu mới"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
