--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/back11"
     android:padding="16dp"
     tools:context="com.ltdd.orderfood.Cart">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listCart"
-        android:background="@drawable/background"
+        android:background="@android:color/white"
         android:layout_width="match_parent"
 
         android:layout_height="match_parent"/>
