--- a/app/src/main/res/layout/activity_food_list.xml
+++ b/app/src/main/res/layout/activity_food_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/back11"
     tools:context="com.ltdd.orderfood.FoodList">
     <com.mancj.materialsearchbar.MaterialSearchBar
         android:id="@+id/searchBar"
