--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,8 +81,8 @@
         android:layout_marginBottom="405dp"
         android:fontFamily="@font/lobster"
         android:gravity="center"
-        android:text="Order Food And Drink"
-        android:textColor="#EF0B26"
+        android:text="@string/slogan"
+        android:textColor="@color/colorPrimary"
         android:textSize="33dp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="0dp"
