--- a/app/src/main/res/layout/cart_layout.xml
+++ b/app/src/main/res/layout/cart_layout.xml
@@ -29,6 +29,16 @@
                 android:text="Document 1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/cart_item_quantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:gravity="center_vertical|start"
+                android:text="x 1"
+                android:textColor="#FF0000"
+             />
             <TextView
                 android:id="@+id/cart_item_price"
                 android:layout_marginLeft="10dp"
@@ -46,14 +56,9 @@
             android:id="@+id/btnxoa"
             android:text="xóa"
             android:background="@drawable/button_style_sign_in"
-            android:textColor="@color/colorText"/>
-        <ImageView
-            android:layout_gravity="center_vertical|end"
-            android:layout_marginRight="16dp"
-            android:id="@+id/cart_item_count"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginHorizontal="2dp"/>
+            android:textColor="@color/colorText"
+                android:layout_marginRight="20dp"/>
+
 
     </LinearLayout>
 
