--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -50,7 +50,7 @@
             android:layout_marginTop="15dp"
             android:gravity="center_vertical"
             android:id="@+id/ckbRemember"
-            android:text="Nhớ"
+            android:text="Nhớ tài khoản"
             android:textSize="20sp"
 
             android:textColor="@color/colorPrimaryDark"
